RESOLVED FIXED148630
Comments on wired.com are blurry
https://bugs.webkit.org/show_bug.cgi?id=148630
Summary Comments on wired.com are blurry
Stefan Arentz
Reported 2015-08-31 07:43:57 PDT
STR: * Open http://www.wired.com/2015/08/new-orleans-built-bustling-tech-hub-katrinas-wake/ * Tap "View Comments" below the article Screenshot attached.
Attachments
Screenshot of bug in action (286.30 KB, image/png)
2015-08-31 07:44 PDT, Stefan Arentz
no flags
Patch (6.82 KB, patch)
2016-05-04 15:35 PDT, Simon Fraser (smfr)
thorton: review+
Stefan Arentz
Comment 1 2015-08-31 07:44:28 PDT
Created attachment 260281 [details] Screenshot of bug in action
Radar WebKit Bug Importer
Comment 2 2015-08-31 08:02:35 PDT
Simon Fraser (smfr)
Comment 3 2015-09-10 15:59:47 PDT
The comments section is in an iframe with: -webkit-backface-visibility: hidden; -webkit-perspective: 1000px; -webkit-transform-style: preserve-3d; -webkit-transform: translateZ(0); transform: translateZ(0) I think the fuzziness on retina is because we need to set rasterizationScale on a CALayer.
Simon Fraser (smfr)
Comment 4 2016-05-04 15:35:06 PDT
Simon Fraser (smfr)
Comment 5 2016-05-05 11:37:17 PDT
Note You need to log in before you can comment on or make changes to this bug.