Comments on wired.com are blurry https://bugs.webkit.org/show_bug.cgi?id=148630 Source/WebCore:

rdar://problem/22499655

Reviewed by Tim Horton.

Make sure to set -rasterizationScale on TileGrid container layers to avoid blurry layers
with some configurations of transforms, perspective and clipping.

Test: compositing/contents-scale/rasterization-scale.html

* platform/graphics/ca/TileController.cpp:
(WebCore::TileController::TileController): Initialize m_deviceScaleFactor before m_tileGrid,
because TileGrid's constructor needs to read the device scale.
* platform/graphics/ca/TileController.h:
* platform/graphics/ca/TileGrid.cpp:
(WebCore::TileGrid::TileGrid): Push a contentsScale (which also sets rasterizationScale) onto
the tile grid container layer on constructions, and in setScale().
(WebCore::TileGrid::setScale):

LayoutTests:

Reviewed by Tim Horton.

This testcase does not fail without the patch because of how WTR does snapshotting,
but some future improvement may fix that.

* compositing/contents-scale/rasterization-scale-expected.html: Added.
* compositing/contents-scale/rasterization-scale.html: Added.

Canonical link: https://commits.webkit.org/175497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200465 268f45cc-cd09-0410-ab3c-d52691b4dbfc